Add ability to hide postform rules

--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -123,6 +123,12 @@ hr {
     border: 1px solid #800000;
 }
 
+.hidePostformRulesButton {
+    text-decoration: none;
+    margin-left: 30px;
+    cursor: pointer;
+}
+
 /*
     Ban
 */
