--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -411,6 +411,15 @@
                             <input type="checkbox" name="showYoutubeVideosTitles" />
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <%= userCssLabelText %>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="userCssEnabled" />
+                            <button class="button" onclick="lord.editUserCss();"><%= editUserCssText %></button>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
         </div>
