Add ability to hide user names

--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -412,6 +412,14 @@
                             <input type="checkbox" name="hideTripcodes" />
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <%= hideUserNamesLabelText %>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="hideUserNames" />
+                        </td>
+                    </tr>
                 </tbody>
             </table>
             <table name="5" style="display: none;">
