Strike out links to hidden posts

--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -420,6 +420,14 @@
                             <input type="checkbox" name="hideUserNames" />
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <%= strikeOutHiddenPostLinksLabelText %>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="strikeOutHiddenPostLinks" />
+                        </td>
+                    </tr>
                 </tbody>
             </table>
             <table name="5" style="display: none;">
