--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -815,7 +815,7 @@
         <b name="postSubject"></b>
         <img name="registered" src="/<%= sitePathPrefix %>img/registered.png" title="<%= registeredText %>"
              style="display: none;">
-        <span class="someName"><span name="userName"></span></span>
+        <span class="someName" name="someName"><span name="userName"></span></span>
         <span name="tripcode" class="tripcode" style="display: none;"></span>
         <img name="whois" src="/<%= sitePathPrefix %>img/flag/%flagName%" style="display: none;">
         <span name="dateTime"></span>
