Add ability to set default audio/video files volume

--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -360,6 +360,14 @@
                             <input type="number" min="1" name="imageZoomSensitivity" />
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <%= defaultAudioVideoVolumeLabelText %>
+                        </td>
+                        <td>
+                            <input type="number" min="0" max="100" name="defaultAudioVideoVolume" />
+                        </td>
+                    </tr>
                 </tbody>
             </table>
             <table name="3" style="display: none;">
