--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -400,6 +400,14 @@
                             <input type="checkbox" name="showAttachedFilePreview" />
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <%= addToFavoritesOnReplyLabelText %>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="addToFavoritesOnReply" />
+                        </td>
+                    </tr>
                 </tbody>
             </table>
             <table name="4" style="display: none;">
