--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -417,8 +417,7 @@
                         <img src="/<%= sitePathPrefix %>img/download.png" title="<%= downloadThreadText %>" /></a>
                 <% end %>
                 <% if ( post.number == post.threadNumber ) %>
-                    <a name="addToFavoritesButton"
-                       href="javascript:lord.addThreadToFavorites('<%= currentBoard.name %>', <%= post.number %>);">
+                    <a name="addToFavoritesButton">
                         <img src="/<%= sitePathPrefix %>img/favorite.png" title="<%= addThreadToFavoritesText %>" /></a>
                 <% end %>
                 <a name="complainButton" href="javascript:lord.complain();">
@@ -812,6 +811,10 @@
     <div class="postHeader">
         <img name="fixed" src="/<%= sitePathPrefix %>img/fixed.png" title="<%= fixedText %>" style="display: none;">
         <img name="closed" src="/<%= sitePathPrefix %>img/closed.png" title="<%= closedText %>" style="display: none;">
+        <img name="bumpLimit" src="/<%= sitePathPrefix %>img/bumplimit.png" title="<%= bumpLimitReachedText %>"
+             style="display: none;">
+        <img name="postLimit" src="/<%= sitePathPrefix %>img/postlimit.png" title="<%= postLimitReachedText %>"
+             style="display: none;">
         <b name="postSubject"></b>
         <img name="registered" src="/<%= sitePathPrefix %>img/registered.png" title="<%= registeredText %>"
              style="display: none;">
@@ -845,8 +848,7 @@
                     <img src="/<%= sitePathPrefix %>img/ban.png" title="<%= banUserText %>" /></a>
                 <a name="downloadButton" href="javascript:lord.downloadThread();">
                     <img src="/<%= sitePathPrefix %>img/download.png" title="<%= downloadThreadText %>" /></a>
-                <a name="addToFavoritesButton"
-                   href="javascript:lord.addThreadToFavorites('<%= currentBoard.name %>', %postNumber%);">
+                <a name="addToFavoritesButton">
                     <img src="/<%= sitePathPrefix %>img/favorite.png" title="<%= addThreadToFavoritesText %>" /></a>
                 <a href="javascript:lord.complain();">
                     <img src="/<%= sitePathPrefix %>img/complain.png" title="<%= complainText %>" /></a>
