Fix markup description

--- a/src/lib/template/markup.tmpl
+++ b/src/lib/template/markup.tmpl
@@ -73,6 +73,10 @@
             [spoiler][i][b]<span class="spoiler"><i><b><%= combinedText %></b></i></span>[/b][/i][/spoiler]
             <br /><br />
             <span class="quotation">&gt;<%= quotation %></span>
+            <br /><br />
+            [sub]<sub><%= subscript %></sub>[/sub] (H<sub>2</sub>O)
+            <br /><br />
+            [sup]<sup><%= superscript %></sup>[/sup] (x<sup>3</sup> + y<sup>2</sup>)
         </div>
         <div class="sectionHeader">
             <h3><%= linkMarkup %></h3>
