--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -230,6 +230,11 @@ span.newPostCount {
     white-space: nowrap;
 }
 
+.postformMarkup {
+    text-align: left;
+	font-size: 0.7em;
+}
+
 .postformRules {
     text-align: left;
 	font-size: 0.7em;
