--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -308,7 +308,8 @@
             <% end %>
         <% end %>
         <% if ( content.mode.name != "ascetic" && content.postingEnabled && ((thread && !thread->postLimitReached() && thread->postingEnabled) || (!thread && !dynamic_cast<Content::Thread *>(&content)->postLimitReached())) ) %>
-            [<a href="javascript:lord.quickReply(<%= post.number %>);" title="<%= quickReplyText %>">&gt;&gt;</a>]
+            [<a href="javascript:lord.quickReply(<%= post.number %>);" title="<%= quickReplyText %>"
+                name="quickReply">&gt;&gt;</a>]
         <% end %>
         <span class="postActions">
             <img src="/<%= sitePathPrefix %>img/post_actions.png" title="<%= postActionsText %>">
@@ -705,17 +706,17 @@
                 <tr>
                     <td colspan="2" class="postformMarkup">
                         <span>
-                            <button class="button" onclick="lord.markup('b'); return false;"
+                            <button class="button" onclick="lord.markup('b'); return false;" name="markupBold"
                                     title="<%= markupBold %>"><b>B</b></button>
-                            <button class="button" onclick="lord.markup('i'); return false;"
+                            <button class="button" onclick="lord.markup('i'); return false;" name="markupItalics"
                                     title="<%= markupItalics %>"><i>i</i></button>
-                            <button class="button" onclick="lord.markup('s'); return false;"
+                            <button class="button" onclick="lord.markup('s'); return false;" name="markupStrikedOut"
                                     title="<%= markupStrikedOut %>"><s>S</s></button>
-                            <button class="button" onclick="lord.markup('u'); return false;"
+                            <button class="button" onclick="lord.markup('u'); return false;" name="markupUnderlined"
                                     title="<%= markupUnderlined %>"><u>U</u></button>
-                            <button class="button" onclick="lord.markup('spoiler'); return false;"
+                            <button class="button" onclick="lord.markup('spoiler'); return false;" name="markupSpoiler"
                                     title="<%= markupSpoiler %>"><span class="spoiler">------</span></button>
-                            <button class="button" onclick="lord.markup('>'); return false;"
+                            <button class="button" onclick="lord.markup('>'); return false;" name="markupQuotation"
                                     title="<%= markupQuotation %>"><span class="quoatation">&gt;</span></button>
                             <select name="langSelect" class="select" title="<%= markupLang %>"
                                     onchange="lord.changeLastCodeLang();">
@@ -726,13 +727,13 @@
                                     <% end %>
                                 <% end %>
                             </select>
-                            <button class="button" onclick="lord.markup('code'); return false;"
+                            <button class="button" onclick="lord.markup('code'); return false;" name="markupCode"
                                     title="<%= markupCode %>">[code]</button>
-                            <button class="button" onclick="lord.markup('sub'); return false;"
+                            <button class="button" onclick="lord.markup('sub'); return false;" name="markupSubscript"
                                     title="<%= markupSubscript %>">H<sub>2</sub>O</button>
-                            <button class="button" onclick="lord.markup('sup'); return false;"
+                            <button class="button" onclick="lord.markup('sup'); return false;" name="markupSuperscript"
                                     title="<%= markupSuperscript %>">X<sup>3</sup></button>
-                            <button class="button" onclick="lord.markup('url'); return false;"
+                            <button class="button" onclick="lord.markup('url'); return false;" name="markupUrl"
                                     title="<%= markupUrl %>">http://</button>
                         </span>
                         <a class="hidePostformRulesButton" />
