--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -418,6 +418,14 @@
                             <input type="checkbox" name="hidePostformMarkup" />
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <%= stripExifFromJpegLabelText %>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="stripExifFromJpeg" />
+                        </td>
+                    </tr>
                 </tbody>
             </table>
             <table name="4" style="display: none;">
